[package]
name = "rust_folio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = { version = "1.1.0", features = ["full"]}
log = "0.4.20"
sea-orm = "0.12.14"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"]}
tower-http = { version = "0.5.1", features = ["cors"]}
